fixed overflow-y issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,14 @@
   .bgImage {
     @apply z-10 bg-no-repeat bg-bgIndex bg-cover w-full;
   }
+
+  .overflow-y-auto {
+    overflow-y: auto;
+  }
+
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
 }
 
 @tailwind utilities;
